# healthcare-extraction-guardrails-adk

./: .env.temp  .gitignore  DESIGN_SPEC.md  Makefile  README.md  public_export.toml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  agent.py
examples/: README.md  audit_trace.json  guarded_safe_output.json  naive_leak_output.json  policy_decision.json
fixtures/: README.md
fixtures/sample/: manifest.json
fixtures/sample/expected/: prior_auth_001.expected.json
fixtures/sample/source/: prior_auth_001.yaml
outputs/: README.md
scripts/: assert_latest_adk_eval_result.py
src/healthcare_guardrails_demo/: __init__.py  audit.py  cli.py  contracts.py  fixture_loader.py  guarded_flow.py  human_review.py  naive_flow.py  policy.py  sensitive_findings.py  text_extraction.py
tests/: test_adk_agent_config.py  test_article_examples.py  test_audit_records.py  test_ci_workflow.py  test_fixture_loading.py  test_guarded_outputs_do_not_leak_sensitive_values.py  test_human_review_routing.py  test_naive_flow_demonstrates_leak.py  test_policy_decisions.py
tests/eval/: eval_config.json
tests/eval/evalsets/: core_guardrails_eval.json
